--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,6 +3,8 @@
     --google-red: #db4437;
     --google-yellow: #F4B40;
     --google-green: #0f9d58;
+    --border-grey: #ddd;
+    --background-white: #fff;
 }
 
 .App {
