--- a/client/src/Components/Gnb.module.css
+++ b/client/src/Components/Gnb.module.css
@@ -1,7 +1,7 @@
 .gnb {
     width: 100%;
-    background-color: #fff;
-    border-bottom: 1px solid #eeeeee;
+    background-color: var(--background-white);
+    border-bottom: 1px solid var(--border-grey);
 }
 
 .gnb ul {
