--- a/client/src/Components/Footer.module.css
+++ b/client/src/Components/Footer.module.css
@@ -1,9 +1,10 @@
 footer {
-    background-color: #ffffff;
+    background-color: var(--background-white);
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 20px;
+    border-top: 1px solid var(--border-grey);
 }
 
 .top {
