--- a/client/src/Components/Login.module.css
+++ b/client/src/Components/Login.module.css
@@ -5,7 +5,7 @@
     padding: 100px;
 }
 
-.loginbox {
+.container {
     width: 400px;
     border: 1px solid var(--border-grey);
     border-radius: 4px;
