--- a/client/src/Components/WebtoonList/WebtoonList.module.css
+++ b/client/src/Components/WebtoonList/WebtoonList.module.css
@@ -24,7 +24,7 @@
 }
 
 @media screen and (max-width: 860px) {
-    .webtoonList {
+    .webtoons {
         grid-template-columns: repeat(4, 1fr);
     }
 }
