Feat: FE login #6 (redux) & minor bug fix(cookie)

--- a/client/src/Components/WebtoonList/WebtoonList.module.css
+++ b/client/src/Components/WebtoonList/WebtoonList.module.css
@@ -28,3 +28,9 @@
         grid-template-columns: repeat(4, 1fr);
     }
 }
+
+@media screen and (max-width: 480px) {
+    .webtoons {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
