--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,3 +11,21 @@
     max-width: 1400px;
     margin: auto;
 }
+
+::-webkit-scrollbar {
+    background-color: var(--border-grey);
+    padding-top: 20px;
+    width: 12px;
+}
+
+::-webkit-scrollbar-track {
+    margin-block: 8px;
+    background-color: var(--border-grey);
+}
+::-webkit-scrollbar-thumb {
+    background-color: #606060;
+    border-radius: 5px;
+}
+::-webkit-scrollbar-thumb:hover {
+    background-color: #909090;
+}
