--- a/client/src/Components/Banner.module.css
+++ b/client/src/Components/Banner.module.css
@@ -2,14 +2,15 @@
     width: 100%;
     background-color: var(--background-white);
     color: #ffffff;
-    overflow: hidden;
     position: relative;
+    overflow: hidden;
 }
 
 .container {
     width: 100%;
     height: 140px;
     display: flex;
+    position: relative;
 }
 
 .container .left,
@@ -19,26 +20,54 @@
     padding: 4px;
     position: absolute;
     top: 66px;
-    color: white;
+    color: var(--background-white);
     font-weight: bold;
     font-size: 16px;
+    z-index: 2;
 }
 
-.left {
+.container .left:hover,
+.container .right:hover {
+    transition: color 200ms;
+    color: grey;
+}
+
+.container .left {
     left: 10px;
 }
-.right {
+
+.container .right {
     right: 10px;
 }
 
-.banner_image {
+.everySlides {
+    transition: all 300ms;
     width: 100%;
     height: 100%;
+    white-space: nowrap;
 }
 
-.banner_image img {
+.slide {
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+    position: relative;
+}
+
+.slide img {
     width: 100%;
     height: 100%;
     object-fit: cover;
-    object-position: 50% 20%;
+    object-position: center;
+}
+
+.slide_text {
+    width: 100%;
+    color: crimson;
+    font-size: 12px;
+    position: absolute;
+    background-color: rgba(0, 0, 0, 0.7);
+    text-align: center;
+    margin: auto;
+    bottom: 0px;
 }
