--- a/client/src/Components/WebtoonList/Webtoon.module.css
+++ b/client/src/Components/WebtoonList/Webtoon.module.css
@@ -4,7 +4,8 @@
 
 .cover {
     width: 100%;
-    max-height: 130px;
+    height: 100%;
+    aspect-ratio: 125 / 100;
     object-fit: cover;
     border-radius: 4px;
 }
