--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,10 +1,14 @@
 :root {
+    /* color */
     --google-blue: #4285f4;
     --google-red: #db4437;
     --google-yellow: #F4B40;
     --google-green: #0f9d58;
     --border-grey: #ddd;
     --background-white: #fff;
+    /* screen size = doesn't work in media-screen
+    --tablet: 860px;
+    --phone: 480px; */
 }
 
 .App {
