--- a/client/src/Components/Header.module.css
+++ b/client/src/Components/Header.module.css
@@ -10,6 +10,7 @@ header {
     height: 20px;
     width: 180px;
     margin-left: 20px;
+    font-weight: bold;
     color: black;
 }
 
@@ -22,10 +23,20 @@ header {
 .icons i {
     padding: 12px 10px;
     border-left: 1px solid var(--border-grey);
+    border-right: 1px solid var(--border-grey);
     font-size: 16px;
     cursor: pointer;
 }
 
 .icons i:hover {
+    color: var(--google-blue);
+}
+
+.auth {
+    background: none;
+    padding: 4px;
+}
+
+.auth:hover {
     color: var(--google-blue);
 }
