--- a/client/src/Components/WebtoonDetail/Comments.module.css
+++ b/client/src/Components/WebtoonDetail/Comments.module.css
@@ -8,7 +8,7 @@
 
 .submit_form {
     font-size: 12px;
-    padding: 20px 20px 10px 20px;
+    padding: 20px;
     border: 1px solid var(--border-grey);
 }
 
@@ -39,6 +39,16 @@
     color: white;
     font-weight: bold;
     border-radius: 4px;
+}
+
+.button_submit:hover {
+    filter: brightness(0.9);
+    transition: filter 300ms;
+}
+
+.button_submit:disabled {
+    pointer-events: none;
+    background-color: grey;
 }
 
 .comments_list {
