Feat: FE webtoon detail page design change

--- a/client/src/Components/WebtoonDetail/Comments.module.css
+++ b/client/src/Components/WebtoonDetail/Comments.module.css
@@ -1,5 +1,7 @@
 .comments {
-    margin: 20px 0;
+    background-color: var(--background-white);
+    padding: 16px 20px;
+    margin-bottom: 12px;
 }
 
 .comments > h3 {
