--- a/client/src/Components/WebtoonList/Webtoon.module.css
+++ b/client/src/Components/WebtoonList/Webtoon.module.css
@@ -2,6 +2,11 @@
     position: relative;
 }
 
+/* .webtoon img:hover {
+    transform: scale(0.95);
+    transition: transform 400ms;
+} */
+
 .cover {
     width: 100%;
     height: 100%;
@@ -44,7 +49,8 @@
     padding: 4px;
     font-size: 12px;
     color: #ffffff;
-    background-color: #db4437;
+    background-color: #e50020;
+    opacity: 0.75;
     border-top-right-radius: 4px;
 }
 
