FE&BE comment, nested comment #1

--- a/client/src/Components/Banner.module.css
+++ b/client/src/Components/Banner.module.css
@@ -28,8 +28,8 @@
 
 .container .left:hover,
 .container .right:hover {
-    transition: color 200ms;
-    color: grey;
+    transition: filter 200ms;
+    filter: brightness(0.8);
 }
 
 .container .left {
