--- a/client/src/Components/Gnb.module.css
+++ b/client/src/Components/Gnb.module.css
@@ -1,12 +1,20 @@
 .gnb {
     width: 100%;
     background-color: var(--background-white);
-    border-bottom: 1px solid var(--border-grey);
+    position: sticky;
+    top: 0;
+    z-index: 1;
+    box-shadow: 0 0px 6px rgb(0, 0, 0, 25%);
 }
 
 .gnb ul {
     display: flex;
     justify-content: space-around;
+}
+
+.gnb ul a {
+    width: 100%;
+    height: 100%;
 }
 
 .gnb li {
@@ -16,12 +24,16 @@
     font-size: 16px;
     font-weight: bold;
     cursor: pointer;
+    background-color: var(--background-white);
 }
 
 .gnb li:hover {
-    color: var(--google-blue);
+    filter: brightness(0.95);
+}
+.gnb li:active {
+    filter: brightness(0.9);
 }
 
-.selected_tab {
-    color: var(--google-blue);
+li.selected_tab {
+    background-color: #e5e5e5;
 }
