--- a/client/src/Components/Main.module.css
+++ b/client/src/Components/Main.module.css
@@ -1,7 +1,12 @@
 .main {
     font-size: 20px;
-    height: 400px;
+    height: 100%;
     background-color: var(--background-white);
     text-align: center;
     padding-top: 100px;
+}
+
+.temp {
+    width: 100%;
+    height: 2000px;
 }
