--- a/client/src/Components/WebtoonDetail/WebtoonDetail.css
+++ b/client/src/Components/WebtoonDetail/WebtoonDetail.css
@@ -1,10 +1,20 @@
 .webtoon_detail {
+    display: flex;
+    flex-direction: column;
+}
+.top {
     width: 100%;
+    height: 100%;
     margin-top: 12px;
     display: flex;
 }
 
+.webtoon_detail_main {
+    flex: 1;
+}
+
 .main_title {
+    flex: 1;
     background-color: var(--background-white);
     padding: 16px 20px;
     border: 1px solid var(--border-grey);
@@ -91,8 +101,12 @@
 }
 
 .buttons button:hover {
-    transition: filter 300ms;
-    filter: brightness(0.9);
+    transition: filter 100ms;
+    filter: brightness(0.95);
+}
+
+.buttons button:active {
+    box-shadow: inset 0 0 10px #333;
 }
 
 /* Recommendation list */
@@ -113,16 +127,13 @@
 /* aside */
 
 .aside {
-    width: 20%;
-    height: 100%;
+    overflow: hidden;
+    height: 588px;
+    max-width: 200px;
     margin: 0 0 12px 12px;
-    padding: 16px 20px;
+    padding: 16px 8px;
     background-color: var(--background-white);
     border: 1px solid var(--border-grey);
-}
-
-aside hr {
-    border-top: 1px solid var(--border-grey);
 }
 
 .update h2 {
@@ -132,6 +143,7 @@ aside hr {
 }
 
 .update li {
+    width: 100%;
     display: flex;
     flex-direction: column;
     font-size: 12px;
@@ -148,6 +160,14 @@ aside hr {
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+.update_title {
+    font-size: 11px;
+    max-width: 100px;
+    max-height: 30px;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
 
 .update ul {
