--- a/client/src/Components/WebtoonDetail/Comments/NestedComment/NestedComment.module.css
+++ b/client/src/Components/WebtoonDetail/Comments/NestedComment/NestedComment.module.css
@@ -1,6 +1,6 @@
 .nested_comment {
     margin-left: 40px;
-    background-color: rgb(230, 230, 230);
+    /* background-color: rgb(230, 230, 230); */
 }
 
 .arrow_position {
