--- a/client/src/Pages/WebtoonDetail/WebtoonDetail.module.css
+++ b/client/src/Pages/WebtoonDetail/WebtoonDetail.module.css
@@ -5,7 +5,7 @@
 .top {
     width: 100%;
     height: 100%;
-    margin-top: 12px;
+    /* margin-top: 12px; */
     display: flex;
 }
 
@@ -83,6 +83,10 @@
     padding: 8px 12px;
     color: #fff;
     border-radius: 4px;
+}
+
+#bookmarked {
+    color: red;
 }
 
 .main_synopsis {
