--- a/client/src/Components/Header/Header.module.css
+++ b/client/src/Components/Header/Header.module.css
@@ -1,4 +1,5 @@
 header {
+    height: 40px;
     background-color: var(--background-white);
     display: flex;
     justify-content: space-between;
@@ -18,12 +19,11 @@ header {
     height: 100%;
     object-fit: cover;
 }
-
-.icons i {
-    padding: 12px 10px;
-    border-right: 1px solid var(--border-grey);
-    font-size: 16px;
-    cursor: pointer;
+.icons {
+    min-width: 290px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
 }
 
 .auth {
