--- a/client/src/Pages/Main/Main.module.css
+++ b/client/src/Pages/Main/Main.module.css
@@ -4,9 +4,9 @@
     background-color: var(--background-white);
     text-align: center;
     padding-top: 100px;
+    background-color: lightgrey;
 }
 
 .temp {
     width: 100%;
-    height: 2000px;
 }
