Feat : FE design bug fix (index.css normalize => individual css file)

--- a/client/src/Components/Comments/Comments.module.css
+++ b/client/src/Components/Comments/Comments.module.css
@@ -1,7 +1,7 @@
 .comments {
     background-color: var(--background-white);
     padding: 16px 20px;
-    margin-bottom: 12px;
+    border-bottom: 1px solid var(--border-grey);
 }
 
 .comments > h3 {
