--- a/client/src/Components/Comments/Comment/SingleComment/SingleComment.module.css
+++ b/client/src/Components/Comments/Comment/SingleComment/SingleComment.module.css
@@ -24,9 +24,11 @@
 }
 
 .comment_more {
+    cursor: pointer;
+    border: none;
     position: absolute;
     padding: 0 8px 8px 8px;
-    top: 10px;
+    top: 24px;
     right: 20px;
     font-size: 12px;
     color: grey;
@@ -37,7 +39,7 @@
     display: flex;
     flex-direction: column;
     position: absolute;
-    top: 10px;
+    top: 16px;
     right: 40px;
     border: 1px solid var(--border-grey);
     background-color: var(--background-white);
@@ -45,6 +47,8 @@
 }
 
 .more button {
+    border: none;
+    cursor: pointer;
     font-size: 12px;
     background: var(--background-white);
     padding: 4px 8px;
@@ -66,6 +70,7 @@
 }
 
 .comment_recommend button {
+    cursor: pointer;
     padding: 0 8px;
     font-size: 12px;
     background-color: var(--background-white);
