--- a/client/src/Components/Gnb/Gnb.module.css
+++ b/client/src/Components/Gnb/Gnb.module.css
@@ -10,14 +10,19 @@
 .gnb ul {
     display: flex;
     justify-content: space-around;
+    padding: 0;
+    margin: 0;
 }
 
 .gnb ul a {
     width: 100%;
     height: 100%;
+    text-decoration: none;
+    color: inherit;
 }
 
 .gnb li {
+    list-style: none;
     width: 100%;
     text-align: center;
     padding: 16px 8px 12px;
