--- a/client/src/Components/Header/Header.module.css
+++ b/client/src/Components/Header/Header.module.css
@@ -14,6 +14,16 @@ header {
     color: black;
 }
 
+.logo a {
+    text-decoration: none;
+    color: inherit;
+}
+
+.logo a h1 {
+    font-size: 16px;
+    margin: 0;
+}
+
 .logo img {
     width: 100%;
     height: 100%;
@@ -27,9 +37,12 @@ header {
 }
 
 .auth {
+    cursor: pointer;
     margin-left: 10px;
     background: none;
     padding: 4px;
+    border: none;
+    font-size: 16px;
 }
 
 .auth:hover {
@@ -37,6 +50,8 @@ header {
 }
 
 .temp_login {
+    cursor: pointer;
+    border: none;
     margin: 0 10px;
     padding-left: 10px;
     border-left: 1px solid var(--border-grey);
