--- a/client/src/Components/HoverButton/HoverButton.module.css
+++ b/client/src/Components/HoverButton/HoverButton.module.css
@@ -10,6 +10,8 @@
 }
 
 .HoverButton button {
+    border: none;
+    cursor: pointer;
     transition: transform 200ms, background-color 200ms;
     margin: 2px 0 0 0;
     color: white;
