--- a/client/src/Pages/Login/Login.module.css
+++ b/client/src/Pages/Login/Login.module.css
@@ -18,6 +18,11 @@
     background: #fafafa;
 }
 
+.top h3 {
+    margin: 0;
+    font-size: 16;
+}
+
 .mid {
     padding: 16px;
     border-bottom: 1px solid var(--border-grey);
@@ -34,6 +39,7 @@ label {
 .mid button {
     width: 100%;
     border: none;
+    cursor: pointer;
     padding: 5px 10px;
     background-color: var(--google-blue);
     color: white;
@@ -50,6 +56,11 @@ label {
     display: flex;
     justify-content: center;
     font-size: 14px;
+}
+
+.bot a {
+    text-decoration: none;
+    color: inherit;
 }
 
 .bot :first-child {
