--- a/client/src/Pages/WebtoonDetail/WebtoonDetail.module.css
+++ b/client/src/Pages/WebtoonDetail/WebtoonDetail.module.css
@@ -5,7 +5,6 @@
 .top {
     width: 100%;
     height: 100%;
-    /* margin-top: 12px; */
     display: flex;
 }
 
@@ -17,23 +16,24 @@
     flex: 1;
     background-color: var(--background-white);
     padding: 16px 20px;
-    border: 1px solid var(--border-grey);
+    border-bottom: 1px solid var(--border-grey);
+}
+
+.main_title h3 {
+    margin: 0;
     font-size: 16px;
-    font-weight: bold;
-    margin-bottom: 12px;
 }
 
 .main_info {
     background-color: var(--background-white);
     padding: 20px 20px;
     border: 1px solid var(--border-grey);
-    margin-bottom: 12px;
 }
 
 .info_wrap {
     display: flex;
     gap: 20px;
-    margin-bottom: 12px;
+    margin-bottom: 20px;
 }
 
 .img_container {
@@ -56,7 +56,6 @@
 }
 .info_container table {
     font-size: 13px;
-    margin-bottom: 12px;
     border-collapse: separate;
     border-spacing: 0 8px;
 }
@@ -78,6 +77,8 @@
 }
 
 .info_container .buttons button {
+    cursor: pointer;
+    border: none;
     width: 40%;
     background-color: var(--google-blue);
     padding: 8px 12px;
@@ -97,7 +98,6 @@
 
 .main_synopsis h3 {
     font-weight: bold;
-    margin-bottom: 8px;
 }
 
 .buttons button:hover {
@@ -113,7 +113,6 @@
 .recommend {
     background-color: var(--background-white);
     padding: 16px 20px;
-    margin-bottom: 12px;
 }
 
 .recommend_list {
@@ -127,26 +126,18 @@
 /* aside */
 
 .aside {
+    border-left: 1px solid var(--border-grey);
+    border-bottom: 1px solid var(--border-grey);
     overflow: hidden;
-    height: 588px;
     max-width: 200px;
-    margin: 0 0 12px 12px;
-    padding: 16px 8px;
+    padding: 16px 8px 0 8px;
     background-color: var(--background-white);
-    border: 1px solid var(--border-grey);
 }
 
-.update h2 {
+.update h3 {
     font-weight: bold;
-    font-size: 14px;
-    margin-bottom: 12px;
-}
-
-.update li {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    font-size: 12px;
+    font-size: 16px;
+    margin: 0 0 20px 0;
 }
 
 .update_img_container {
@@ -170,29 +161,21 @@
     text-overflow: ellipsis;
 }
 
+.update_list {
+    display: flex;
+    height: 100%;
+    flex-direction: column;
+}
+
 .update ul {
     display: flex;
     align-items: center;
-    margin-bottom: 8px;
+    margin: 0 0 10px 0;
+    padding: 0;
 }
 
-/* hot */
-.hot h2 {
-    font-weight: bold;
-    font-size: 14px;
-    margin-bottom: 12px;
-}
-
-.hot li {
-    display: flex;
-    flex-direction: column;
-    font-size: 12px;
-}
-
-.hot ul {
-    display: flex;
-    align-items: center;
-    margin-bottom: 8px;
+.recommend h3 {
+    margin: 0;
 }
 
 @media screen and (max-width: 860px) {
