--- a/client/src/Pages/Write/Write.module.css
+++ b/client/src/Pages/Write/Write.module.css
@@ -10,6 +10,7 @@
 .header {
     font-size: 16px;
     padding: 8px 12px;
+    margin: 0;
     width: 100%;
     border-top: 1px solid var(--border-grey);
     border-bottom: 1px solid var(--border-grey);
@@ -18,9 +19,12 @@
 .category {
     width: 100%;
     display: flex;
+    margin: 0;
+    padding: 0;
 }
 
 .category li {
+    list-style: none;
     width: 10%;
     text-align: center;
     border: 1px solid var(--border-grey);
@@ -67,6 +71,8 @@
 }
 
 .button {
+    border: none;
+    cursor: pointer;
     margin-top: 12px;
     width: 82px;
     height: 32px;
