--- a/client/src/Pages/Community/Community.module.css
+++ b/client/src/Pages/Community/Community.module.css
@@ -7,6 +7,17 @@
     padding: 40px;
 }
 
+.community h2 {
+    width: 100%;
+    background-color: var(--background-grey);
+    border-top: 1px solid var(--border-grey);
+    border-bottom: 1px solid var(--border-grey);
+    font-size: 20px;
+    padding: 12px;
+    margin: 0 0 12px;
+    font-weight: bold;
+}
+
 .category {
     width: 100%;
     display: flex;
@@ -14,16 +25,22 @@
     margin: 0;
 }
 
-.category li {
-    width: 100px;
-    text-align: center;
-    border: 1px solid var(--border-grey);
-    list-style: none;
+.category a {
+    text-decoration: none;
+    color: inherit;
 }
 
 .category_tab {
-    padding: 0 10px;
+    width: 100px;
+    text-align: center;
+    list-style: none;
+    padding: 4px 10px;
     cursor: pointer;
+    border: 1px solid var(--border-grey);
+    background-color: var(--background-white);
+}
+.category_tab:hover {
+    filter: brightness(0.9);
 }
 
 .button {
@@ -43,32 +60,41 @@
     width: 100%;
     text-align: center;
     border-collapse: collapse;
-    border-top: 2px solid var(--google-blue);
+    border-top: 2px solid var(--text-black);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
 }
 
 #selected {
-    background-color: var(--background-grey);
+    background-color: var(--border-grey);
+    font-weight: bold;
 }
 
 thead {
     line-height: 48px;
-    border-bottom: 1px solid var(--google-blue);
+    border-bottom: 1px solid var(--text-black);
 }
 
 tbody tr {
     font-size: 11px;
     line-height: 28px;
-    border-bottom: 1px solid var(--border-grey);
     cursor: pointer;
+    background-color: var(--background-white);
 }
 tbody tr:hover {
-    background-color: var(--background-grey);
+    filter: brightness(0.9);
 }
 
 tbody tr :nth-child(1),
 tbody tr :nth-child(2),
 tbody tr :nth-child(3) {
     font-size: 13px;
+}
+
+tbody tr:nth-of-type(even) {
+    background-color: #f3f3f3;
+}
+tbody tr:last-of-type {
+    border-bottom: 1px solid var(--text-black);
 }
 
 tbody tr :nth-child(2) {
