--- a/client/src/Pages/Community/CommunityPost.js/CommunityPost.module.css
+++ b/client/src/Pages/Community/CommunityPost.js/CommunityPost.module.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 20px;
+    padding: 40px;
     color: var(--text-black);
 }
 
@@ -37,6 +37,7 @@
     border-bottom: 1px solid var(--border-grey);
     font-size: 20px;
     padding: 12px;
+    margin: 0;
     font-weight: bold;
 }
 
