--- a/client/src/Pages/Write/Write.module.css
+++ b/client/src/Pages/Write/Write.module.css
@@ -31,16 +31,18 @@
 }
 
 .category_tab {
+    background-color: var(--background-white);
     padding: 0 10px;
     cursor: pointer;
 }
 
 .category_tab:hover {
-    border: 1px solid var(--google-blue);
+    filter: brightness(0.9);
 }
 
 #selected_tab {
-    background-color: var(--background-grey);
+    background-color: var(--border-grey);
+    font-weight: bold;
 }
 
 .form_top {
