--- a/client/src/Pages/WebtoonList/WebtoonList.module.css
+++ b/client/src/Pages/WebtoonList/WebtoonList.module.css
@@ -11,6 +11,10 @@
     gap: 12px;
 }
 
+.webtoonList h5 {
+    text-align: center;
+}
+
 .webtoonList button {
     width: 20%;
     display: block;
