--- a/client/src/Pages/Community/CommunityPost.js/CommunityPost.module.css
+++ b/client/src/Pages/Community/CommunityPost.js/CommunityPost.module.css
@@ -69,6 +69,7 @@
 }
 
 .post_like {
+    cursor: pointer;
     width: 100px;
     height: 100px;
     border-radius: 50%;
@@ -78,4 +79,8 @@
     justify-content: center;
     font-size: 20px;
     background-color: var(--background-grey);
+}
+
+#iLiked {
+    color: red;
 }
