--- a/client/src/Pages/My/My.module.css
+++ b/client/src/Pages/My/My.module.css
@@ -2,9 +2,9 @@
     background-color: var(--background-white);
 }
 
-.my h3 {
+.my h3,
+.my h4 {
     padding: 20px;
-    font-size: 20px;
     text-align: center;
     margin: 0;
 }
