--- a/client/src/Pages/WebtoonDetail/WebtoonDetail.module.css
+++ b/client/src/Pages/WebtoonDetail/WebtoonDetail.module.css
@@ -92,7 +92,7 @@
 
 .main_synopsis {
     border: 1px solid var(--border-grey);
-    padding: 12px;
+    padding: 20px 12px;
     font-size: 12px;
 }
 
