--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,7 +2,7 @@
     /* color */
     --google-blue: #4285f4;
     --google-red: #db4437;
-    --google-yellow: #F4B40;
+    --google-yellow: #f4b400;
     --google-green: #0f9d58;
     --border-grey: #ddd;
     --background-grey: #f5f5f5;
