--- a/client/src/Components/Banner/Banner.module.css
+++ b/client/src/Components/Banner/Banner.module.css
@@ -1,7 +1,7 @@
 .banner {
     width: 100%;
     background-color: var(--background-white);
-    color: #ffffff;
+    color: var(--background-white);
     position: relative;
     overflow: hidden;
 }
@@ -64,11 +64,41 @@
 
 .slide_text {
     width: 100%;
-    color: crimson;
-    font-size: 12px;
     position: absolute;
-    background-color: rgba(0, 0, 0, 0.7);
-    text-align: center;
-    margin: auto;
     bottom: 0px;
+    background-color: rgba(0, 0, 0, 0.7);
+    color: var(--google-red);
+    font-size: 12px;
+    text-align: center;
+}
+
+.progress {
+    width: 100%;
+    height: 10px;
+    position: absolute;
+    z-index: 2;
+    bottom: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.progress_dot {
+    cursor: pointer;
+    width: 16px;
+    height: 6px;
+    margin: 0 4px;
+    border-radius: 8px;
+    background-color: var(--google-red);
+    opacity: 0.2;
+    transition: opacity 300ms;
+    /* background-color: rgba(106, 106, 106, 0.4); */
+}
+
+.progress_dot:hover {
+    filter: brightness(0.9);
+}
+
+#active_dot {
+    opacity: 0.9;
 }
