FE banner, main design change

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -9,6 +9,7 @@
     --background-white: #fff;
     --text-black: #333;
     --text-grey: #777;
+    --kakao-yellow: #ffd200;
 
     /* screen size = doesn't work in media-screen
     --tablet: 860px;
