--- a/client/src/Components/Banner/Banner.module.css
+++ b/client/src/Components/Banner/Banner.module.css
@@ -8,18 +8,23 @@
 
 .container {
     width: 100%;
-    height: 140px;
+    height: 200px;
     display: flex;
     position: relative;
 }
 
 .container .left,
 .container .right {
+    /* border: 1px solid var(--background-white);
+    width: 28px;
+    height: 28px;
+    background-color: rgba(0, 0, 0, 0.2);
+    border-radius: 50%; */
     border: none;
     background: none;
     padding: 4px;
     position: absolute;
-    top: 66px;
+    top: 80px;
     color: var(--background-white);
     font-weight: bold;
     font-size: 16px;
@@ -63,21 +68,33 @@
 }
 
 .slide_text {
+    padding: 10px 0;
     width: 100%;
     position: absolute;
     bottom: 0px;
-    background-color: rgba(0, 0, 0, 0.7);
-    color: var(--google-red);
+    background-color: var(--kakao-yellow);
+    color: #222222;
     font-size: 12px;
     text-align: center;
 }
 
+.progress_type2 {
+    color: #222222;
+    width: 100%;
+    height: 10px;
+    position: absolute;
+    z-index: 2;
+    bottom: 22px;
+    left: 12px;
+    font-size: 20px;
+    opacity: 0.6;
+}
 .progress {
     width: 100%;
     height: 10px;
     position: absolute;
     z-index: 2;
-    bottom: 16px;
+    bottom: 40px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -89,7 +106,7 @@
     height: 6px;
     margin: 0 4px;
     border-radius: 8px;
-    background-color: var(--google-red);
+    background-color: var(--kakao-yellow);
     opacity: 0.2;
     transition: opacity 300ms;
     /* background-color: rgba(106, 106, 106, 0.4); */
