--- a/client/src/Pages/Main/Main.module.css
+++ b/client/src/Pages/Main/Main.module.css
@@ -1,12 +1,75 @@
 .main {
+    margin: 0;
+    padding: 10px;
     font-size: 20px;
     height: 100%;
     background-color: var(--background-white);
     text-align: center;
-    padding-top: 100px;
-    background-color: lightgrey;
 }
 
-.temp {
+.cards {
+    display: grid;
+    gap: 12px;
+    grid-template-columns: repeat(4, 1fr);
+    grid-column: auto;
+    justify-content: space-between;
+}
+
+.cards a {
+    text-decoration: none;
+    color: var(--background-white);
+    border: 1px solid;
+    border-radius: 12px;
+    overflow: hidden;
+}
+
+.cards a:nth-child(1) {
+    border: 6px solid var(--google-blue);
+    background-color: var(--google-blue);
+}
+
+.cards a:nth-child(2) {
+    border: 6px solid var(--google-green);
+    background-color: var(--google-green);
+}
+
+.cards a:nth-child(3) {
+    border: 6px solid var(--google-red);
+    background-color: var(--google-red);
+}
+
+.cards a:nth-child(4) {
+    border: 6px solid var(--google-yellow);
+    background-color: var(--google-yellow);
+}
+
+.card {
     width: 100%;
+}
+
+.img_container img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+}
+
+.card h3 {
+    margin: 8px 0;
+    font-size: 20px;
+}
+.card h4 {
+    margin: 8px 0 12px;
+    font-size: 14px;
+}
+
+@media screen and (max-width: 860px) {
+    .cards {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .cards {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
