FE : mainpage QnA & mainpage design change

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,6 +5,7 @@
     --google-yellow: #f4b400;
     --google-green: #0f9d58;
     --border-grey: #ddd;
+    --background-black: #222222;
     --background-grey: #f5f5f5;
     --background-white: #fff;
     --text-black: #333;
